Fixed spacing between images and img size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,9 @@ body {
 	line-height: 1;
 }
 
+#project-img {
+	padding: 10px;
+}
 
 ol, ul {
 	list-style: none;
